--- a/client/package.json
+++ b/client/package.json
@@ -50,12 +50,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.2.0",
-    "sass-loader": "^12.6.0",
     "socket.io-client": "4.4.0",
-    "style-loader": "^3.3.1",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
@@ -78,7 +74,10 @@
     "joi": "^17.6.0",
     "mongoose": "^6.2.10",
     "process": "^0.11.10",
+    "style-loader": "^3.3.1",
     "supertest": "^6.2.2",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   }
 }
