--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -6,7 +6,7 @@ on:
 jobs:
 
   build_docker_client:
-    name: "🐳 Build Docker (CLIENT) Image"
+    name: "🐳 🏗️ Build Docker (CLIENT) Image"
     runs-on: ubuntu-latest
     env:
      working-directory: client
@@ -76,9 +76,8 @@ jobs:
         if: steps.docker-cache.outputs.cache-hit != 'true'
         run: docker tag ${{ env.working-directory }} localhost:5000/${{ env.working-directory }} && docker push localhost:5000/${{ env.working-directory }} || true
 
-
   build_docker_server:
-    name: "🐳 Build Docker (SERVER) Image"
+    name: "🐳 🏗️ Build Docker (SERVER) Image"
     runs-on: ubuntu-latest
     env:
      working-directory: server
