--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -19,8 +19,26 @@ jobs:
     name: 🧪 Docker CI
     uses: ./.github/workflows/docker_ci.yml
 
-  build_docker_client:
-    needs: [node_ci, docker_ci]
+  end_to_end_tests:
+    name: 🧪 E2E Testing
+    with:
+      ENVIRONMENT: production
+    secrets:
+      NODE_ENV: production
+      SERVER_URL: {{ secrets.SERVER_URL }}
+      PORT: {{ secrets.PORT }}
+      MONGODB_URL: {{ secrets.MONGODB_URL }}
+      SKIP_PREFLIGHT_CHECK: {{ secrets.SKIP_PREFLIGHT_CHECK }}
+      REACT_APP_FIREBASE_API_KEY: {{ secrets.REACT_APP_FIREBASE_API_KEY }}
+      REACT_APP_FIREBASE_AUTH_DOMAIN: {{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+      REACT_APP_FIREBASE_PROJECT_ID: {{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+      REACT_APP_FIREBASE_STORAGE_BUCKET: {{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+      REACT_APP_FIREBASE_MESSAGING_SENDER_ID: {{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+      REACT_APP_FIREBASE_APP_ID: {{ secrets.REACT_APP_FIREBASE_APP_ID }}
+      REACT_APP_FIREBASE_MEASUREMENT_ID: {{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
+
+  publish_docker_client:
+    needs: [node_ci, docker_ci, end_to_end_tests]
     name: "🐳 Build/Publish Docker (CLIENT) Image"
     environment: production
     runs-on: ubuntu-latest
@@ -122,8 +140,8 @@ jobs:
           # cache-from: type=local,src=/tmp/.buildx-cache-${{ env.working-directory }}
           # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
-  build_docker_server:
-    needs: [node_ci, docker_ci]
+  publish_docker_server:
+    needs: [node_ci, docker_ci, end_to_end_tests]
     name: "🐳 Build/Publish Docker (SERVER) Image"
     environment: production
     runs-on: ubuntu-latest
@@ -228,7 +246,7 @@ jobs:
           # cache-to: type=local,dest=/tmp/.buildx-cache-${{ env.working-directory }}
 
   verify_ec2:
-    needs: [build_docker_server, build_docker_client]
+    needs: [publish_docker_server, publish_docker_client]
     name: ✅ EC2 Verification
     environment: staging
     runs-on: ubuntu-latest
