--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -21,6 +21,7 @@ jobs:
 
   end_to_end_tests:
     name: 🧪 E2E Testing
+    uses: ./.github/workflows/end_to_end.yml
     with:
       ENVIRONMENT: production
     secrets:
