--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -25,18 +25,18 @@ jobs:
     with:
       ENVIRONMENT: production
     secrets:
-      NODE_ENV: production
-      SERVER_URL: {{ secrets.SERVER_URL }}
-      PORT: {{ secrets.PORT }}
-      MONGODB_URL: {{ secrets.MONGODB_URL }}
-      SKIP_PREFLIGHT_CHECK: {{ secrets.SKIP_PREFLIGHT_CHECK }}
-      REACT_APP_FIREBASE_API_KEY: {{ secrets.REACT_APP_FIREBASE_API_KEY }}
-      REACT_APP_FIREBASE_AUTH_DOMAIN: {{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
-      REACT_APP_FIREBASE_PROJECT_ID: {{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
-      REACT_APP_FIREBASE_STORAGE_BUCKET: {{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
-      REACT_APP_FIREBASE_MESSAGING_SENDER_ID: {{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
-      REACT_APP_FIREBASE_APP_ID: {{ secrets.REACT_APP_FIREBASE_APP_ID }}
-      REACT_APP_FIREBASE_MEASUREMENT_ID: {{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
+      NODE_ENV: ${{ secrets.NODE_ENV }}
+      SERVER_URL: ${{ secrets.SERVER_URL }}
+      PORT: ${{ secrets.PORT }}
+      MONGODB_URL: ${{ secrets.MONGODB_URL }}
+      SKIP_PREFLIGHT_CHECK: ${{ secrets.SKIP_PREFLIGHT_CHECK }}
+      REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+      REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+      REACT_APP_FIREBASE_PROJECT_ID: ${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+      REACT_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+      REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+      REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+      REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
 
   publish_docker_client:
     needs: [node_ci, docker_ci, end_to_end_tests]
