--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -174,6 +174,57 @@ jobs:
       #     working-directory: ${{ env.working-directory }}
       #     test-command: "npm run test"
 
+  end_to_end:
+    runs-on: ${{ matrix.os }}
+    env:
+      client-working-directory: ./client
+      server-working-directory: ./server
+      test-working-directory: ./__tests__
+      PORT: 5000
+      MONGODB_URL: mongodb://127.0.0.1:27017/test
+    strategy:
+      fail-fast: false
+      matrix:
+        node: ['12', '14']
+        os: [ubuntu-latest]
+
+    name: End-to-end Testing
+    steps:
+      - name: "🍃 Create mongoDB Docker container"
+        run: sudo docker run -d -p 27017:27017 mongo:latest
+
+      - name: "☁️ Check out Git Repository"
+        uses: actions/checkout@v2
+
+      - name: "🔧 Set up Node"
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+
+      - name: "⚡ Cache dependencies"
+        uses: actions/cache@v3
+        id: modules-cache
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+
+      - name: "📦 Start Client"
+        working-directory: ${{ env.client-working-directory }}
+        run: |
+          npm install
+          npm run dev:client
+
+      - name: "📦 Start Server"
+        working-directory: ${{ env.server-working-directory }}
+        run: |
+          npm install
+          npm run start
+
+      - name: "✅  Run tests"
+        working-directory: ${{ env.test-working-directory }}
+        run: npm run test
 
   coverage_upload:
     needs: [server_test, client_test]
