--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -105,7 +105,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
-        if: steps.modules-cache.outputs.cache-hit != 'true'
+        # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "🏗 Build client"
