--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -38,6 +38,19 @@ jobs:
     name: "✅ E2E Testing"
     environment: ${{ inputs.ENVIRONMENT }}
     runs-on: ubuntu-latest
+    env:
+      NODE_ENV: {{ secrets.NODE_ENV }}
+      SERVER_URL: {{ secrets.SERVER_URL }}
+      PORT: {{ secrets.PORT }}
+      MONGODB_URL=mongodb://127.0.0.1:27017/test
+      SKIP_PREFLIGHT_CHECK: {{ secrets.SKIP_PREFLIGHT_CHECK }}
+      REACT_APP_FIREBASE_API_KEY: {{ secrets.REACT_APP_FIREBASE_API_KEY }}
+      REACT_APP_FIREBASE_AUTH_DOMAIN: {{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+      REACT_APP_FIREBASE_PROJECT_ID: {{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+      REACT_APP_FIREBASE_STORAGE_BUCKET: {{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+      REACT_APP_FIREBASE_MESSAGING_SENDER_ID: {{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+      REACT_APP_FIREBASE_APP_ID: {{ secrets.REACT_APP_FIREBASE_APP_ID }}
+      REACT_APP_FIREBASE_MEASUREMENT_ID: {{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
     services:
       mongodb:
           image: mongo
