--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -121,7 +121,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['12', '14']
+        node: ['16']
         os: [ubuntu-latest]
 
     name: 🗄️ Server CI
@@ -185,7 +185,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['12', '14']
+        node: ['16']
         os: [ubuntu-latest]
 
     name: End-to-end Testing
