--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -130,14 +130,45 @@ jobs:
       # - name: "🧪 Run local Docker registry"
       #   run: docker run -d -p 5000:5000 --restart=always --name registry -v /tmp/docker-registry:/var/lib/registry registry:2 && npx wait-on tcp:5000
 
-      # - name: "🏗 Build Docker Client image"
-      #   # if: steps.docker-cache-client.outputs.cache-hit != 'true'
-      #   working-directory: ./client
-      #   # run: docker build . -t client --cache-from=localhost:5000/client --build-arg BUILDKIT_INLINE_CACHE=1
-      #   run: docker build . -t client
+      - name: "🏗 Build Docker Client image"
+        # if: steps.docker-cache-client.outputs.cache-hit != 'true'
+        working-directory: ./client
+        # run: docker build . -t client --cache-from=localhost:5000/client --build-arg BUILDKIT_INLINE_CACHE=1
+        run: |
+          docker build . \
+            -t client \
+            --build-arg BUILDKIT_INLINE_CACHE=1 \
+            --build-arg NODE_ENV=$NODE_ENV \
+            --build-arg SERVER_URL=$SERVER_URL \
+            --build-arg PORT=$PORT \
+            --build-arg MONGODB_URL=$MONGODB_URL \
+            --build-arg SKIP_PREFLIGHT_CHECK=$SKIP_PREFLIGHT_CHECK \
+            --build-arg REACT_APP_FIREBASE_API_KEY=$REACT_APP_FIREBASE_API_KEY \
+            --build-arg REACT_APP_FIREBASE_AUTH_DOMAIN=$REACT_APP_FIREBASE_AUTH_DOMAIN \
+            --build-arg REACT_APP_FIREBASE_PROJECT_ID=$REACT_APP_FIREBASE_PROJECT_ID \
+            --build-arg REACT_APP_FIREBASE_STORAGE_BUCKET=$REACT_APP_FIREBASE_STORAGE_BUCKET \
+            --build-arg REACT_APP_FIREBASE_MESSAGING_SENDER_ID=$REACT_APP_FIREBASE_MESSAGING_SENDER_ID \
+            --build-arg REACT_APP_FIREBASE_APP_ID=$REACT_APP_FIREBASE_APP_ID \
+            --build-arg REACT_APP_FIREBASE_MEASUREMENT_ID=$REACT_APP_FIREBASE_MEASUREMENT_ID \
 
-      # - name: "🏷️ Tag Docker Client image"
-      #   run: docker tag client localhost:5000/client
+      - name: "🏷️ Tag Docker Client image"
+        run: docker tag client woofer-client
+
+      - name: "🚀 Run Client Docker Container"
+        run: |
+          docker run -id -p 3000:3000 --env NODE_ENV=$NODE_ENV \
+            --env SERVER_URL=$SERVER_URL \
+            --env PORT=$PORT \
+            --env MONGODB_URL=$MONGODB_URL \
+            --env SKIP_PREFLIGHT_CHECK=$SKIP_PREFLIGHT_CHECK \
+            --env REACT_APP_FIREBASE_API_KEY=$REACT_APP_FIREBASE_API_KEY \
+            --env REACT_APP_FIREBASE_AUTH_DOMAIN=$REACT_APP_FIREBASE_AUTH_DOMAIN \
+            --env REACT_APP_FIREBASE_PROJECT_ID=$REACT_APP_FIREBASE_PROJECT_ID \
+            --env REACT_APP_FIREBASE_STORAGE_BUCKET=$REACT_APP_FIREBASE_STORAGE_BUCKET \
+            --env REACT_APP_FIREBASE_MESSAGING_SENDER_ID=$REACT_APP_FIREBASE_MESSAGING_SENDER_ID \
+            --env REACT_APP_FIREBASE_APP_ID=$REACT_APP_FIREBASE_APP_ID \
+            --env REACT_APP_FIREBASE_MEASUREMENT_ID=$REACT_APP_FIREBASE_MEASUREMENT_ID \
+            woofer-client:latest
 
       # - name: "📦 Cache/Build Docker Server layers"
       #   id: docker-cache-server
@@ -148,27 +179,24 @@ jobs:
       #     restore-keys: |
       #       docker-registry-no-buildkit-server-${{ github.sha }}
 
-      # - name: "🏗 Build Docker Server image"
-      #   # if: steps.docker-cache-server.outputs.cache-hit != 'true'
-      #   working-directory: ./server
-      #   run: docker build . -t server --cache-from=localhost:5000/server --build-arg BUILDKIT_INLINE_CACHE=1
+      - name: "🏗 Build Docker Server image"
+        # if: steps.docker-cache-server.outputs.cache-hit != 'true'
+        working-directory: ./server
+        run: docker build . -t server --build-arg BUILDKIT_INLINE_CACHE=1
 
-      # - name: "🏷️ Tag Docker Server image"
-      #   run: docker tag localhost:5000/server && docker push localhost:5000/server || true
+      - name: "🏷️ Tag Docker Server image"
+        run: docker tag server woofer-server
 
-      # - name: "🚀 Run Server Docker Container"
-      #   run: docker run --env-file ./.env -d -p 5000:5000 docker-server:latest
+      - name: "🚀 Run Server Docker Container"
+        run: docker run --env-file ./.env -d -p 5000:5000 woofer-server:latest
 
-      # - name: "🚀 Run Client Docker Container"
-      #   run: docker run --env-file ./.env -d -p 3000:3000  docker-client/client:latest
+      # - name: "🏗 Build w/ Docker Compose"
+      #   run: |
+      #     docker-compose build
 
-      - name: "🏗 Build w/ Docker Compose"
-        run: |
-          docker-compose build
-
-      - name: "🧱 Start Docker Containers"
-        run: |
-          docker-compose --env-file .env up -d
+      # - name: "🧱 Start Docker Containers"
+      #   run: |
+      #     docker-compose --env-file .env up -d
 
       - name: "✅ Run End-to-end tests"
         working-directory: ./__tests__
