--- a/server/package.json
+++ b/server/package.json
@@ -42,7 +42,7 @@
     "firebase": "^8.10.1",
     "helmet": "^5.0.2",
     "http-status": "^1.5.0",
-    "mongodb-memory-server": "^8.4.2",
+    "mongodb-memory-server-core": "^8.5.2",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
