add docker install

--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -89,12 +89,7 @@ jobs:
         # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
-      - name: "🔧 Install docker"
-        run: |
-          apt-get update && apt-get install --no-install-recommends -y ca-certificates curl gnupg lsb-release sudo
-          curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          apt-get update && apt-get install --no-install-recommends -y docker-ce docker-ce-cli containerd.io
+      - uses: docker-practice/actions-setup-docker@master
 
       - name: "🔧 Create .env file"
         run: |
