--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -89,7 +89,11 @@ jobs:
         # if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
-      - uses: docker-practice/actions-setup-docker@master
+      - name: "🔧 Install docker"
+        run: |
+          apt-get update && apt-get install --no-install-recommends -y ca-certificates curl gnupg lsb-release sudo
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          apt-get update && apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
       - name: "🔧 Create .env file"
         run: |
