--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -96,7 +96,7 @@ jobs:
           echo \
           "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
           $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          apt-get update && apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+          apt-get update && apt-get install --no-install-recommends -y docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
       - name: "🔧 Create .env file"
         run: |
