--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -215,5 +215,7 @@ jobs:
 
       - name: "✅ Run End-to-end tests"
         working-directory: ./__tests__
+        env:
+          PUPPETEER_SKIP_DOWNLOAD
         run: |
           npm test --if-present
