--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "puppeteer": "^13.7.0",
     "socket.io": "^4.4.1",
     "uuid": "8.3.2",
     "winston": "^3.6.0",
