--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -212,7 +212,8 @@ jobs:
         # if: steps.modules-cache.outputs.cache-hit != 'true'
         working-directory: ./__tests__
         run: |
-          chown -R $(whoami) /usr/local/bin
+          su root
+          apt install sudo
           npm install
 
       - name: "✅ Run End-to-end tests"
